[tool.poetry]
name = "poetry-project-test"
version = "0.1.0"
description = ""
authors = ["Kathleen Short <kathleen.short@ailylabs.com>"]
readme = "README.md"
packages = [{include = "poetry_project_test"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
psmpy = "^0.3.13"
category-encoders = "^2.6.3"
xgboost = "^2.0.3"
causalinference = "^0.1.3"
pyyaml = "^6.0.1"
flask = "^3.0.3"
rdd = "^0.0.3"
lightgbm = "^4.3.0"
econml = "^0.15.0"
setuptools = "^69.5.1"
pingouin = "^0.5.4"
sparsesc = {git = "https://github.com/microsoft/SparseSC.git"}
toolz = "^0.12.1"
doubleml = "^0.7.1"
missingno = "^0.5.2"
patsy = "^0.5.6"
prettytable = "^3.10.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
